Fix activity list scrollbar / make toolbar a drag handle

--- a/app/client/Last.fm.css
+++ b/app/client/Last.fm.css
@@ -250,10 +250,6 @@ ActivityListWidget {
 	min-width: 40px;
 }
 
-ActivityListWidget QScrollBar {
-    min-height: 0px;
-}
-
 ActivityListItem {
 	min-width: 40px;
 	min-height: 40px;
